<resources>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="app_name">꿈가지</string>

    <string name="hello_world">hello My world</string>
    <string name="action_settings">Settings</string>

    <string name="share_title">메모가지, 당신의 소중한 꿈 가지</string>
    <string name="share_contents">당신의 모든 소망들이 모이는 꿈 가지\n가지 앱을 소개합니다. 마켓주소 https://play.google.com/store/apps/details?id=momo.kikiplus.com.kbucket</string>

    <string name="popup_title">팝업</string>
    <string name="popup_prepare_string">잠시만 기다려주세요. \n서비스 준비중입니다.</string>
    <string name="share_popup_title">공유 가지</string>
    <string name="share_popup_content">모두의 가지들 속으로 공유해볼까요?</string>
    <string name="update_popup_title">업데이트 알림</string>
    <string name="update_popup_content_y">새로운 버전이 있습니다.\n반드시 업데이트 해야 합니다.</string>
    <string name="update_popup_content_n">새로운 버전이 있습니다.\n업데이트 하시면 더 좋은 메모가지를 이용하실 수 있습니다.</string>

    <string name="back_string">뒤로 버튼을 한번 더 누르시면 종료됩니다.</string>
    <string name="loading_string">잠시만 기다려주세요...</string>

    <string name="password_fail_string">암호가 일치하지 않습니다</string>
    <string name="password_cancle_string">암호 설정을 해제합니다</string>

    <string name="nickname_fail_string">닉네임을 반드시 입력해주세요~</string>

    <string name="check_input_bucket_string">이미 작성했거나 완료된 내용이 있습니다~</string>
    <string name="write_bucekt_success_string">세상의 가지로 공유 되었습니다.\n 당신의 꿈을 앞으로도 응원합니다.</string>
    <string name="write_bucekt_fail_string">공유하는데 실패하였으니 다시 시도해주세요.\n 계속 문제가 되는 경우 문의하기로 내용을 전달해주세요.</string>
    <string name="upload_image_fail_string">이미지를 전송하는데 실패하였으니 다시 시도해주세요.\n 계속 문제가 되는 경우 문의하기로 내용을 전달해주세요.</string>
    <string name="write_bucekt_image_attch">이미지를 첨부하는데 실패하였습니다. 다시 시도해주세요.\n</string>

    <string name="server_fail_string">데이타를 로딩하는데 실패하였으니 다시 시도해주세요.\n 계속 문제가 되는 경우 문의하기로 내용을 전달해주세요.</string>

    <string name="version_fail_string">서비스 준비중입니다</string>
    <string name="version_update_string">최신 버전이 있어 마켓으로 이동합니다</string>
    <string name="version_lastest_string">최신 버전을 이용하고 계십니다</string>

    <string name="db_backup_faile_string">메모 가지 DB를 백업하는데 실패하였습니다.\n 개선을 하기 위해 문의를 주시면 감사하겠습니다</string>
    <string name="db_backup_path_string">메모 가지 DB 서버로 백업 완료</string>
    <string name="db_import_success_string">메모 가지 DB 복원 완료!</string>
    <string name="db_import_fail_string">메모 가지 DB를 복원하는데 실패하였습니다.\n 개선을 하기 위해 문의를 주시면 감사하겠습니다.</string>
    <string name="db_delete_bucket">버킷리스트를 모두 삭제하였습니다. \n 새로운 버킷리스트를 작성해보세요.</string>

    <string name="intro_title1">메모 가지</string>
    <string name="intro_title2">당신의 모든 소망들이\n 모이는 꿈 가지</string>

    <string name="main_menu1">꿈 가지\n 작성</string>
    <string name="main_menu2">내가 이룬\n 꿈 가지</string>
    <string name="main_menu3">모두의\n 가지들</string>
    <string name="main_menu4">설정</string>
    <string name="main_menu5">버킷\n랭킹</string>

    <string name="wriete_bucket_date">날짜</string>
    <string name="wriete_bucket_content">내용</string>
    <string name="wriete_bucket_deadline">기한</string>
    <string name="wriete_bucket_completeYN">완료</string>

    <string name="conf_update">업데이트</string>
    <string name="conf_question">문의하기</string>
    <string name="conf_import">복원</string>
    <string name="conf_export">백업</string>
    <string name="conf_db_reset">리셋</string>
    <string name="conf_set_userSetting">별명설정</string>
    <string name="conf_set_userBackSetting">배경설정</string>
    <string name="conf_set_password">암호설정</string>
    <string name="conf_cancle_password">암호해제</string>
    <string name="conf_guide">튜토리얼</string>
    <string name="conf_back_color">앱 종료 후에 선택하신 색상이 바탕색으로 적용됩니다</string>

    <string name="ai_fail_string">AI 로봇 드림이는 서비스 준비중입니다</string>
    <string name="widget_write_bucket">가지 작성</string>
    <string name="widget_your_bucket">가지 목록</string>
    <string name="widget_world_bucket">세상 가지</string>
    <string name="widget_share_bucket">공유</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="bucket_list_title">내가 이룬 꿈 가지</string>
    <string name="bucket_listline_modify">수정</string>
    <string name="bucket_listline_delete">삭제</string>
    <string name="comment_layout_enter">입력</string>
    <string name="conf_layout_lastest">최신 버전</string>
    <string name="conf_layout_current">현재 버전</string>
    <string name="notice_list_title">공지 목록</string>
    <string name="password_layout_title">암호 설정</string>

    <string name="popup_layout_title">팝업</string>
    <string name="popup_layout_close">닫기</string>
    <string name="img_popup_layout_title">이미지 보기</string>
    <string name="notice_popup_layout_title">공지 팝업</string>

    <string name="bucketrank_list_title">버킷 랭킹 목록</string>
    <string name="bucketrank_list_contents1">최고에요</string>
    <string name="bucketrank_list_contents2">좋아요</string>
    <string name="bucketrank_list_contents3">괜찮네요</string>
    <string name="setbackgound_layout_title">테마색 변경</string>
    <string name="setnickname_layout_title">별명 설정</string>
    <string name="setnickname_layout_contents">   당신의 별명을 입력해주세요.</string>

    <string name="share_layout_title">누군가의 가지 이야기</string>
    <string name="share_list_title">모두의 가지 목록</string>
    <string name="share_line_show">보기</string>

    <string name="write_list_title">꿈 가지 목록</string>
    <string name="write_list_sort_date">최신 날짜순</string>
    <string name="write_list_sort_name">제목순 정렬</string>
    <string name="write_list_sort_deadline">기한순 정렬</string>
    <string name="write_list_add">추가</string>
    <string name="write_detail_save">저장</string>
    <string name="write_detail_delete">삭제</string>
    <string name="write_detail_share">공유</string>
    <string name="write_detail_date">날짜</string>
    <string name="write_detail_gallery">갤러리</string>
    <string name="write_detail_camera">카메라</string>

    <string name="question_layout_type">분류</string>
    <string name="question_layout_error">오류</string>
    <string name="question_layout_impro">개선</string>
    <string name="question_layout_qest">문의</string>
    <string name="question_layout_contents">내용</string>
    <string name="question_layout_hint">내용을 상세하게 작성해 주시면 담당자가 이해하는 데 도움이 됩니다. 감사합니다. </string>

    <string name="check_version_lasted">현재버전이 최신버전입니다</string>
    <string name="check_network">연결된 네트워크가 없습니다.\n네트워크를 연결해주세요.</string>
    <string name="delete_popup_title">가지 삭제</string>
    <string name="delete_popup_content">당신의 꿈가지 삭제하시겠어요?</string>
    <string name="category_popup_title">가지 가테고리</string>
    <string name="category_popup_content">당신의 꿈가지 카테고리를 선택해주세요</string>

    <string name="chat_layout_title">오늘의 이야기</string>
    <string name="chat_line_input">입력</string>

    <string name="interest_bucket_list_title">버킷 리스트 100개 </string>
    <string name="interest_bucket_list_select">선택</string>
    <string name="interest_bucket_list_add">관심 버킷으로 추가/삭제</string>
    <string name="interest_bucket_list_view">버킷 리스트 내용</string>
    <string name="share_add_popup_title">버킷 추가</string>
    <string name="share_add_popup_content">나의 관심 버킷으로 추가할까요?</string>
    <string name="share_add_popup_ok">나의 관심 버킷으로 추가했어요~</string>
    <string name="share_delete_popup_ok">나의 관심 버킷에서 삭제했어요~</string>

    <string name="widget_memo_title">당신의 다짐</string>
    <string name="widget_memo_modify">수정</string>
    <string name="widget_memo_save">저장</string>

    <string-array name="dream100">
        <item>수영배우기</item>
        <item>제빵 배우기</item>
        <item>바리스타 자격증 따기</item>
        <item>제2외국어 배우기</item>
        <item>피아노 배우기</item>
        <item>스쿠버 다이빙 배우기</item>
        <item>헤어 미용 기술 배우기</item>
        <item>세계 일주</item>
        <item>히말라야 트래킹하기</item>
        <item>중국 만리장성 가보기</item>
        <item>해외에서 자전거 여행하기</item>
        <item>제주 한라산 등반</item>
        <item>사막 가보기</item>
        <item>엄마랑 여행가기</item>
        <item>유럽 배낭 여행하기</item>
        <item>울릉도 가기</item>
        <item>독도 가기</item>
        <item>내집 짓기</item>
        <item>반려 동물과 살기</item>
        <item>누군가의 멘토 되기</item>
        <item> 나눔 실천하기</item>
        <item>강연하기 </item>
        <item>부모님 해외여행 보내드리기 </item>
        <item>행복한 가정 꾸리기 </item>
        <item>사회 단체 만들기 </item>
        <item>책 100권 읽기</item>
        <item>외국인 친구 사귀기</item>
        <item>가족 사진 찍기</item>
        <item>마라톤 완주하기</item>
        <item>번지 점프하기</item>
        <item>책 쓰기</item>
        <item>가구 만들기</item>
        <item>패러글라이딩 하기</item>
        <item>가족과 함께 여행하기</item>
        <item>다른 나라에서 살아보기</item>
        <item>장기 기증하기</item>
        <item>운전면허 따기</item>
        <item>나무 심기</item>
        <item>재능기부하기</item>
        <item>철인3종경기 도전하기</item>
        <item>캠핑카 여행가기</item>
        <item>부모님 크루즈 여행 보내드리기</item>
        <item>꽃시장 방문하기</item>
        <item>커플링 하기</item>
        <item>어학연수 가기 </item>
        <item> 연애하기</item>
        <item>결혼하기 </item>
        <item>화보 사진 찍기</item>
        <item>도서관 만들기</item>
        <item>내 차사기</item>
        <item>카메라DSLR 사기</item>
        <item>애완동물 키우기</item>
        <item>백두산 등반하기</item>
        <item>담금주 만들기</item>
        <item>새벽에 수산시장 가기</item>
        <item>포토샵 배우기</item>
        <item>수상스키 배우기</item>
        <item>경매 참여해보기</item>
        <item>다이어트 성공하기</item>
        <item>신문에 내 글 투고하기</item>
        <item>온천여행 가기</item>
        <item>춤 배우기</item>
        <item>복권 당첨되기</item>
        <item>자서전 쓰기</item>
        <item>동창회 가기</item>
        <item>봉사활동 하기</item>
        <item>기증하기</item>
        <item>정원 가꾸기</item>
        <item>방청객 되기</item>
        <item>스스로 동영상 만들기</item>
        <item>사진첩 만들기</item>
        <item>한 분야의 전문가 되기</item>
        <item>노트북 사기</item>
        <item>기타 사기</item>
        <item>미싱 배우기</item>
        <item>파워 블로그 되기</item>
        <item>사업하기</item>
        <item>페인트칠 하기</item>
        <item>스킨스쿠버 해보기</item>
        <item>우유니 사막 가기</item>
        <item>양떼 목장 가기</item>
        <item>비키니 입기</item>
        <item>단골 술집 만들기</item>
        <item>가죽 공예 배우기</item>
        <item>내 집 마련하기</item>
        <item>드레스룸 만들기</item>
        <item>쓸데없는 짐 정리하기</item>
        <item>타투 하기</item>
        <item>금연 하기</item>
        <item>헤어스타일 바꾸기</item>
        <item>우주여행 가기</item>
        <item>나의 비밀 고백하기</item>
        <item>나만의 요리 개발하기</item>
        <item>바자회 참여하기</item>
        <item>TV에 출연하기</item>
        <item>헌혈 50번해서 금장 타기</item>
        <item>벽화봉사 해보기</item>
        <item>해외 멋진 호텔에서 1박하기</item>
        <item>유기견 봉사하기</item>
        <item>버킷리스트 모든 항목 완료하기</item>
    </string-array>

    <string name="appshortcuts1">홈</string>
    <string name="appshortcuts2">가지 목록</string>
    <string name="appshortcuts3">세상 가지</string>
    <string name="appshortcuts4">가지 랭킹</string>
    <string name="navi_menu01">암호설정</string>
    <string name="navi_menu02">암호해제</string>
    <string name="navi_menu03">DB관리</string>
    <string name="navi_menu04">별명설정</string>
    <string name="navi_menu05">배경설정</string>
    <string name="navi_menu06">튜토리얼</string>
    <string name="navi_menu07">문의하기</string>
    <string name="navi_menu08">현재버전</string>
    <string name="navi_menu09">공유하기</string>
    <string name="navi_menu10">Bucket List 100</string>
</resources>


