<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/menu_item1"
        android:orderInCategory="100"
        android:title="@string/navi_menu01" />
    <item
        android:id="@+id/menu_item2"
        android:orderInCategory="100"
        android:title="@string/navi_menu02" />
    <!--2025.03.02 Temporary
    <item
        android:id="@+id/menu_item3"
        android:orderInCategory="100"
        android:title="@string/navi_menu03" />

        -->
    <item
        android:id="@+id/menu_item4"
        android:orderInCategory="100"
        android:title="@string/navi_menu04" />
    <item
        android:id="@+id/menu_item5"
        android:orderInCategory="100"
        android:title="@string/navi_menu05" />
    <item
        android:id="@+id/menu_item6"
        android:orderInCategory="100"
        android:title="@string/navi_menu06" />
    <item
        android:id="@+id/menu_item7"
        android:orderInCategory="100"
        android:title="@string/navi_menu07" />
    <item
        android:id="@+id/menu_item8"
        android:orderInCategory="100"
        android:title="@string/navi_menu08" />
    <item
        android:id="@+id/menu_item9"
        android:orderInCategory="100"
        android:title="@string/navi_menu09" />
    <item
        android:id="@+id/menu_item10"
        android:orderInCategory="100"
        android:title="@string/navi_menu10" />
</menu>
