<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="momo.kikiplus.refactoring.kbucket.ui.view.fragment.UpgradeFragment">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/question_back_color"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFBB33"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/question_layout_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:background="#FFCC0000"
            android:text="보내기"
            android:textColor="#FFFFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/question_layout_type"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/question_layout_titleView1"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#FF99CC00"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/question_layout_error"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/question_layout_titleView2"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#FF99CC00"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/question_layout_impro"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/question_layout_titleView3"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#FF99CC00"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/question_layout_qest"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="20dp"
            android:layout_weight="10"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:gravity="top|center_horizontal"
                android:text="@string/question_layout_contents"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/question_layout_contentView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ballon2"
                android:gravity="top"
                android:hint="@string/question_layout_hint"
                android:text="" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>