<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="momo.kikiplus.refactoring.kbucket.ui.view.fragment.DetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/writedetail_back_color"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFBB33"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView
                    android:id="@+id/write_detail_text1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/wriete_bucket_completeYN"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/write_complete_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />

                <Button
                    android:id="@+id/write_saveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:background="#FFCC0000"
                    android:text="@string/write_detail_save"
                    android:textColor="#FFFFFFFF"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/write_deleteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:background="#FFCC0000"
                    android:text="@string/write_detail_delete"
                    android:textColor="#FFFFFFFF"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/write_shareButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:background="#FFCC0000"
                    android:text="@string/write_detail_share"
                    android:textColor="#FFFFFFFF"
                    android:textSize="15sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/write_detail_text2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/write_detail_date"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/detail_dateView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ballon2"
                    android:editable="false"
                    android:padding="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/write_detail_text3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/wriete_bucket_content"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/detail_contentView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ballon2"
                    android:inputType="text"
                    android:padding="5dp"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/write_detail_text4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/wriete_bucket_deadline"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/detail_deadline"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ballon2"
                    android:editable="false"
                    android:padding="5dp"
                    android:singleLine="true" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/detail_remove"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/remove"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/detail_imageview"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center_horizontal|center_vertical" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_margin="10dp"
                    android:layout_weight="10"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <Button
                        android:id="@+id/write_image_gallery"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="30dp"
                        android:background="#FF99CC00"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/write_detail_gallery"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/write_image_camera"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="15dp"
                        android:background="#FF99CC00"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/write_detail_camera"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>
