<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bg_db_view"
    android:background="#FFFFBB33"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="momo.kikiplus.com.kbucket.ui.view.activity.DBMgrActivity">

    <Button
        android:id="@+id/db_title_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFCC0000"
        android:text="@string/db"
        android:textColor="#FFFFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/iv_db_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/anim2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/btn_db_menu01"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/conf_import"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/iv_db_icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="#FF99CC00"
        android:textColor="#FFFFFFFF"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btn_db_menu02"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/conf_export"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/btn_db_menu01"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="#FF99CC00"
        android:textColor="#FFFFFFFF"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btn_db_menu03"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:text="@string/conf_db_reset"
        app:layout_constraintTop_toBottomOf="@id/btn_db_menu02"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="#FF99CC00"
        android:textColor="#FFFFFFFF"
        android:textStyle="bold"
        />


</androidx.constraintlayout.widget.ConstraintLayout>